--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,13 +20,17 @@ services:
     restart: on-failure
     environment:
       - JENKINS_AGENT_SSH_PUBKEY=ssh_pub_key
+      - JENKINS_AGENT_HOME=/root
     networks:
       - jenkins-net
     depends_on:
       - jenkins
+    volumes:
+      - agent-data:/home/jenkins/agent
 
 networks:
   jenkins-net:
 
 volumes:
   jenkins-data:
+  agent-data:
